add slug to category and categoryMenuPartial

--- a/BlogAppMVC.Web/Views/Admin/AllBlogs.cshtml
+++ b/BlogAppMVC.Web/Views/Admin/AllBlogs.cshtml
@@ -16,9 +16,14 @@
         <input type="text" asp-for="SearchString" name="searchString" id="searchString" />
         <input type="submit" value="Wyszukaj" />
     </div>
+    <div class="page row col-md-2 foo-view col-xs-12">
+        <div id="foo-view" data-url="@Url.Action(action: "CategoryMenuPartial", controller: "Blog")">
+        </div>
+    </div>
     <div class="row">
+
         <table class="table">
-                <thead>
+            <thead>
                 <tr>
                     <th>
                         Tytuł
@@ -37,8 +42,8 @@
                     </th>
                     <th></th>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 @foreach (var item in Model.Blogs)
                 {
                     <tr>
@@ -49,7 +54,7 @@
                             @Html.DisplayFor(modelItem => item.Text)
                         </td>
                         <td>
-                            <img src="~/Content/img/blog/@item.Id/@item.PhotoPath" asp-append-version="true" width="350" height="250"/>
+                            <img src="~/Content/img/blog/@item.Id/@item.PhotoPath" asp-append-version="true" width="350" height="250" />
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CategoryName)
@@ -58,14 +63,15 @@
                             @Html.DisplayFor(modelItem => item.CreatedDate)
                         </td>
                         <td>
-                            @Html.ActionLink("Edycja", "EditBlog", new {id = item.Id}) |
-                            @Html.ActionLink("Details", "BlogDetails", "Blog", new { id=item.Id }) |
-                            @Html.ActionLink("Usuń", "DeleteBlog", new {id = item.Id}, new {@class = "delete"})
+                            @Html.ActionLink("Edycja", "EditBlog", new { id = item.Id }) |
+                            @Html.ActionLink("Kategorie", "CategoryMenuPartial", "Blog", new { name = item.Slug })
+                            @Html.ActionLink("Details", "BlogDetails", "Blog", new { id = item.Id }) |
+                            @Html.ActionLink("Usuń", "DeleteBlog", new { id = item.Id }, new { @class = "delete" })
                         </td>
                     </tr>
                 }
-                </tbody>
-            </table>
+            </tbody>
+        </table>
     </div>
     <div class="row">
         <table>
@@ -91,6 +97,7 @@
     </div>
 </form>
 
+
 @section Scripts
 {
     <script type="text/javascript">
@@ -99,6 +106,12 @@
             document.forms[0].submit();
         }
 
+        $(document).ready(function () {
+            (function () {
+                var url = $("#foo-view").data("url");
+                $("#foo-view").load(url);
+            })();
+        });
 
         // usuwanie bloga
         $("body").on("click",
