--- a/BlogAppMVC.Web/Views/Admin/AddNewCategory.cshtml
+++ b/BlogAppMVC.Web/Views/Admin/AddNewCategory.cshtml
@@ -17,8 +17,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input style="width: 300px" asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="hidden" asp-for="Slug" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="hidden" asp-for="Sorting" class="form-control" />
