--- a/BlogAppMVC.Web/Views/Admin/EditCategory.cshtml
+++ b/BlogAppMVC.Web/Views/Admin/EditCategory.cshtml
@@ -20,6 +20,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <input type="hidden" asp-for="Slug" class="form-control" />
+            </div>
+            <div class="form-group">
                 <input type="hidden" asp-for="Sorting" class="form-control" />
             </div>
             <div class="form-group">
