--- a/BlogAppMVC.Web/Views/Blog/BlogDetails.cshtml
+++ b/BlogAppMVC.Web/Views/Blog/BlogDetails.cshtml
@@ -46,6 +46,10 @@
     }
 </div>
 
+<div>
+    <a asp-action="AllBlogs" asp-controller="Admin">Powrót do listy blogów</a>
+</div>
+
 <link href="~/Fancybox/jquery.fancybox.css" rel="stylesheet" />
 
 @section Scripts
